[tool.poetry]
name = "filtro-chapa-turing-bot"
version = "0.1.0"
description = ""
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]

[tool.poetry.dependencies]
python = "*"
python-telegram-bot = "^11.1"
pillow = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
filtro-bot = "filtro_chapa_turing_bot.__main__:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
